--- a/index.html
+++ b/index.html
@@ -618,7 +618,19 @@
     animation-fill-mode: repeat;
     
 }
-
+  .snow {
+    background-color: white;
+    width: 0;
+    height: 0;
+    position: absolute;
+    margin: 5% auto;
+    left: 10%;
+    box-shadow: 10px 10px 10px 6px white,
+      100px 150px 10px 6px white,
+      100px 600px 10px 6px white,
+      -50px 500px 10px 6px white,
+      400px 20px 10px 6px white
+  }
   
   .inside2{
     width: 0;
@@ -668,3 +680,4 @@
 <div class="shadowheart flipped"></div>
 <div class="inside"></div>
 <div class="inside2"></div>
+<div class="snow"></div>
