--- a/index.html
+++ b/index.html
@@ -626,18 +626,22 @@
     margin: 5% auto;
     left: 10%;
     box-shadow: 10px 10px 10px 6px white,
+      250px -10px 10px 6px white,
       100px 150px 10px 6px white,
       100px 600px 10px 6px white,
+      -90px 350px 10px 6px white,
       30px  200px 10px 6px white,
       140px 400px 10px 6px white,
       500px -10px 10px 6px white,
       -50px 500px 10px 6px white,
       400px 20px 10px 6px white,
       350px 450px 10px 6px white,
+      600px 470px 10px 6px white,
       550px 650px 10px 6px white,
       700px 60px 10px 6px white,
       600px 250px 10px 6px white,
-      700px 400px 10px 6px white
+      700px 400px 10px 6px white,
+      750px 600px 10px 6px white
   }
   
   .inside2{
