--- a/index.html
+++ b/index.html
@@ -618,6 +618,138 @@
     animation-fill-mode: repeat;
     
 }
+  @keyframes appearing3 {
+    0% {
+      box-shadow: 10px 10px 10px 6px white,
+      250px -10px 10px 6px white;
+    }
+    10% {
+      box-shadow: 10px 10px 10px 6px white,
+      250px -10px 10px 6px white,
+      100px 150px 10px 6px white,
+      100px 600px 10px 6px white;
+    }
+    20% {
+      box-shadow: 10px 10px 10px 6px white,
+      250px -10px 10px 6px white,
+      100px 150px 10px 6px white,
+      100px 600px 10px 6px white,
+      -90px 350px 10px 6px white,
+      30px  200px 10px 6px white;
+    }
+    30% {
+      box-shadow: 10px 10px 10px 6px white,
+      250px -10px 10px 6px white,
+      100px 150px 10px 6px white,
+      100px 600px 10px 6px white,
+      -90px 350px 10px 6px white,
+      30px  200px 10px 6px white,
+      140px 400px 10px 6px white;
+    }
+    40% {
+      box-shadow: 10px 10px 10px 6px white,
+      250px -10px 10px 6px white,
+      100px 150px 10px 6px white,
+      100px 600px 10px 6px white,
+      -90px 350px 10px 6px white,
+      30px  200px 10px 6px white,
+      140px 400px 10px 6px white,
+      500px -10px 10px 6px white;
+    }
+    50% {
+      box-shadow: 10px 10px 10px 6px white,
+      250px -10px 10px 6px white,
+      100px 150px 10px 6px white,
+      100px 600px 10px 6px white,
+      -90px 350px 10px 6px white,
+      30px  200px 10px 6px white,
+      140px 400px 10px 6px white,
+      500px -10px 10px 6px white,
+      -50px 500px 10px 6px white,
+      400px 20px 10px 6px white;
+    }
+    60% {
+      box-shadow: 10px 10px 10px 6px white,
+      250px -10px 10px 6px white,
+      100px 150px 10px 6px white,
+      100px 600px 10px 6px white,
+      -90px 350px 10px 6px white,
+      30px  200px 10px 6px white,
+      140px 400px 10px 6px white,
+      500px -10px 10px 6px white,
+      -50px 500px 10px 6px white,
+      400px 20px 10px 6px white,
+      350px 450px 10px 6px white;
+    }
+    70% {
+      box-shadow: 10px 10px 10px 6px white,
+      250px -10px 10px 6px white,
+      100px 150px 10px 6px white,
+      100px 600px 10px 6px white,
+      -90px 350px 10px 6px white,
+      30px  200px 10px 6px white,
+      140px 400px 10px 6px white,
+      500px -10px 10px 6px white,
+      -50px 500px 10px 6px white,
+      400px 20px 10px 6px white,
+      350px 450px 10px 6px white,
+      600px 470px 10px 6px white,
+      550px 650px 10px 6px white;
+    }
+    80% {
+      box-shadow: 10px 10px 10px 6px white,
+      250px -10px 10px 6px white,
+      100px 150px 10px 6px white,
+      100px 600px 10px 6px white,
+      -90px 350px 10px 6px white,
+      30px  200px 10px 6px white,
+      140px 400px 10px 6px white,
+      500px -10px 10px 6px white,
+      -50px 500px 10px 6px white,
+      400px 20px 10px 6px white,
+      350px 450px 10px 6px white,
+      600px 470px 10px 6px white,
+      550px 650px 10px 6px white,
+      700px 60px 10px 6px white;
+    }
+    90% {
+      box-shadow: 10px 10px 10px 6px white,
+      250px -10px 10px 6px white,
+      100px 150px 10px 6px white,
+      100px 600px 10px 6px white,
+      -90px 350px 10px 6px white,
+      30px  200px 10px 6px white,
+      140px 400px 10px 6px white,
+      500px -10px 10px 6px white,
+      -50px 500px 10px 6px white,
+      400px 20px 10px 6px white,
+      350px 450px 10px 6px white,
+      600px 470px 10px 6px white,
+      550px 650px 10px 6px white,
+      700px 60px 10px 6px white,
+      600px 250px 10px 6px white,
+      700px 400px 10px 6px white;
+    }
+    100% {
+      box-shadow: 10px 10px 10px 6px white,
+      250px -10px 10px 6px white,
+      100px 150px 10px 6px white,
+      100px 600px 10px 6px white,
+      -90px 350px 10px 6px white,
+      30px  200px 10px 6px white,
+      140px 400px 10px 6px white,
+      500px -10px 10px 6px white,
+      -50px 500px 10px 6px white,
+      400px 20px 10px 6px white,
+      350px 450px 10px 6px white,
+      600px 470px 10px 6px white,
+      550px 650px 10px 6px white,
+      700px 60px 10px 6px white,
+      600px 250px 10px 6px white,
+      700px 400px 10px 6px white,
+      750px 600px 10px 6px white;
+    }
+  }
   .snow {
     background-color: white;
     width: 0;
@@ -641,7 +773,11 @@
       700px 60px 10px 6px white,
       600px 250px 10px 6px white,
       700px 400px 10px 6px white,
-      750px 600px 10px 6px white
+      750px 600px 10px 6px white;
+    animation-name: appearing3;
+    animation-duration: 7s;
+    animation-iteration-count: 1;
+    animation-fill-mode: repeat;
   }
   
   .inside2{
