--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
     animation-name: appearing;
     animation-duration: 7s;
     animation-iteration-count: 1;
-    animation-fill-mode: repeat;
+    animation-fill-mode: forwards;
     
 }
   @keyframes appearing3 {
@@ -747,7 +747,10 @@
       700px 60px 10px 6px white,
       600px 250px 10px 6px white,
       700px 400px 10px 6px white,
-      750px 600px 10px 6px white;
+      750px 600px 10px 6px white,
+      850px 700px 10px 6px white,
+      350px 700px 10px 6px white,
+      -80px 650px 10px 6px white;
     }
   }
   .snow {
@@ -773,11 +776,14 @@
       700px 60px 10px 6px white,
       600px 250px 10px 6px white,
       700px 400px 10px 6px white,
-      750px 600px 10px 6px white;
+      750px 600px 10px 6px white
+      850px 700px 10px 6px white,
+      350px 700px 10px 6px white,
+      -80px 650px 10px 6px white;
+      
     animation-name: appearing3;
     animation-duration: 7s;
-    animation-iteration-count: 1;
-    animation-fill-mode: repeat;
+    animation-fill-mode: forwards;
   }
   
   .inside2{
@@ -820,7 +826,7 @@
     animation-name: appearing2;
     animation-duration: 7s;
     animation-iteration-count: 1;
-    animation-fill-mode: repeat;
+     animation-fill-mode: forwards;
   }
 
 </style>
