--- a/index.html
+++ b/index.html
@@ -627,12 +627,15 @@
     margin: 5% auto;
     left: 10%;
     box-shadow: 10px 10px 10px 6px white,
+      -150px -50px 10px 6px white,
+      -190px 150px 10px 6px white,
       250px -10px 10px 6px white,
       100px 150px 10px 6px white,
       100px 600px 10px 6px white,
       -90px 350px 10px 6px white,
       30px  200px 10px 6px white,
       140px 400px 10px 6px white,
+      330px 200px 10px 6px white,
       500px -10px 10px 6px white,
       -50px 500px 10px 6px white,
       400px 20px 10px 6px white,
@@ -645,6 +648,13 @@
       750px 600px 10px 6px white,
       850px 700px 10px 6px white,
       900px 10px 10px 6px white,
+      1200px 170px 10px 6px white,
+      1700px -50px 10px 6px white,
+      1700px 500px 10px 6px white,
+      1500px 100px 10px 6px white,
+      1400px 300px 10px 6px white,
+      1300px -10px 10px 6px white,
+      1600px 200px 10px 6px white,
       1000px 30px 10px 6px white,
       1100px 300px 10px 6px white,
       900px 200px 10px 6px white,
