--- a/index.html
+++ b/index.html
@@ -636,6 +636,7 @@
       30px  200px 10px 6px white,
       140px 400px 10px 6px white,
       330px 200px 10px 6px white,
+      150px 900px 10px 6px white,
       500px -10px 10px 6px white,
       -50px 500px 10px 6px white,
       400px 20px 10px 6px white,
@@ -648,11 +649,15 @@
       750px 600px 10px 6px white,
       850px 700px 10px 6px white,
       900px 10px 10px 6px white,
+      1150px 880px 10px 6px white,
+      1085px 650px 10px 6px white,
       1200px 170px 10px 6px white,
       1700px -50px 10px 6px white,
       1700px 500px 10px 6px white,
       1500px 100px 10px 6px white,
+      1500px 800px 10px 6px white,
       1400px 300px 10px 6px white,
+      1450px 580px 10px 6px white,
       1300px -10px 10px 6px white,
       1600px 200px 10px 6px white,
       1000px 30px 10px 6px white,
