--- a/index.html
+++ b/index.html
@@ -711,10 +711,22 @@
     animation-iteration-count: 1;
      animation-fill-mode: forwards;
   }
-
+  .bottom {
+    width: 500px;
+    height: 100px;
+    position: absolute;
+    margin: 55% auto;
+    top: 10px;
+    left: 0%;   
+    background-color: white;
+   
+    
+    
+  }
 </style>
 <div class="shadowheart"></div>
 <div class="shadowheart flipped"></div>
 <div class="inside"></div>
 <div class="inside2"></div>
 <div class="snow"></div>
+<div class="bottom"></div>
