--- a/index.html
+++ b/index.html
@@ -714,11 +714,9 @@
   .bottom {
     width: 500px;
     height: 100px;
-    position: absolute;
+    position: abosolute;
     margin: 55% auto;
-    top: 10px;
-    left: 0%;   
-    background-color: white;
+    background: linear-gradient rgb(255, 255, 255)0%;
    
     
     
