--- a/index.html
+++ b/index.html
@@ -712,13 +712,11 @@
      animation-fill-mode: forwards;
   }
   .bottom {
-    width: 500px;
+    width: 1000px;
     height: 100px;
-    position: abosolute;
-    margin: 55% auto;
-    background: linear-gradient rgb(255, 255, 255)0%;
-   
-    
+    margin: 60% auto;
+    left: 10%;
+    background-color: white;
     
   }
 </style>
