--- a/index.html
+++ b/index.html
@@ -712,12 +712,14 @@
      animation-fill-mode: forwards;
   }
   .bottom {
-    width: 1000px;
+    width: 2000px;
     height: 100px;
     margin: 60% auto;
     left: 10%;
-    background-color: white;
-    
+    background: linear-gradient(0deg, rgb(249, 250, 238) 0%,
+        rgb(162, 190, 229) 46%, rgb(21, 46, 118) 100%);
+
+        
   }
 </style>
 <div class="shadowheart"></div>
