--- a/index.html
+++ b/index.html
@@ -727,9 +727,17 @@
     position: absolute;
     left: 50px;
     background-color: white;
-    border-radius: 100%;  
-    
-    
+    border-radius: 100%; 
+  }
+  
+  .snowman1 {
+    width: 60px;
+    height: 60px;
+    margin: 57% auto;
+    position: absolute;
+    left: 42.3px;
+    background-color: white;
+    border-radius: 100%; 
   }
 </style>
 <div class="shadowheart"></div>
@@ -739,3 +747,4 @@
 <div class="snow"></div>
 <div class="bottom"></div>
 <div class="snowman"></div>
+	<div class="snowman1"></div>
