--- a/index.html
+++ b/index.html
@@ -739,6 +739,19 @@
     background-color: white;
     border-radius: 100%; 
   }
+  
+  .snowmaneye1 {
+    width: 10px;
+    height: 10px;
+    margin: 54% auto;
+    position: absolute;
+    left: 64px;
+    z-index: 2;
+    background-color: black;
+    border-radius: 100%;    
+  }
+  
+  
 </style>
 <div class="shadowheart"></div>
 <div class="shadowheart flipped"></div>
@@ -748,3 +761,6 @@
 <div class="bottom"></div>
 <div class="snowman"></div>
 	<div class="snowman1"></div>
+		<div class="snowmaneye1"></div>
+      
+</div>
