--- a/index.html
+++ b/index.html
@@ -750,7 +750,16 @@
     background-color: black;
     border-radius: 100%;    
   }
-  
+  .snowmaneye2 {
+    width: 10px;
+    height: 10px;
+    margin: 54% auto;
+    position: absolute;
+    left: 85px;
+    z-index: 2;
+    background-color: black;
+    border-radius: 100%;    
+  }
   
 </style>
 <div class="shadowheart"></div>
@@ -762,5 +771,4 @@
 <div class="snowman"></div>
 	<div class="snowman1"></div>
 		<div class="snowmaneye1"></div>
-      
-</div>
+    <div class="snowmaneye2"></div>
