--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
         rgb(162, 190, 229) 46%, rgb(249, 250, 238) 100%);    
   }
   
-  .snowman {
+  .snowman1 {
     width: 60px;
     height: 60px;
     margin: 53% auto;
@@ -730,7 +730,7 @@
     border-radius: 100%; 
   }
   
-  .snowman1 {
+  .snowman1_1 {
     width: 80px;
     height: 80px;
     margin: 56% auto;
@@ -768,7 +768,7 @@
 <div class="inside2"></div>
 <div class="snow"></div>
 <div class="bottom"></div>
-<div class="snowman"></div>
-	<div class="snowman1"></div>
+<div class="snowman1"></div>
+	<div class="snowman1_1"></div>
 		<div class="snowmaneye1"></div>
     <div class="snowmaneye2"></div>
