--- a/index.html
+++ b/index.html
@@ -761,6 +761,35 @@
     border-radius: 100%;    
   }
   
+  .snowman2 {
+    width: 40px;
+    height: 40px;
+    margin: 55.5% auto;
+    position: absolute;
+    left: 150px;
+    background-color: white;
+    border-radius: 100%; 
+  }
+  .snowman2_1 {
+    width: 60px;
+    height: 60px;
+    margin: 57.3% auto;
+    position: absolute;
+    left: 140px;
+    background-color: white;
+    border-radius: 100%; 
+  }
+  .snowman2eye1 {
+    width: 7px;
+    height: 7px;
+    margin: 56.1% auto;
+    position: absolute;
+    left: 160px;
+    z-index: 2;
+    background-color: black;
+    border-radius: 100%;  
+  }
+  
 </style>
 <div class="shadowheart"></div>
 <div class="shadowheart flipped"></div>
@@ -772,3 +801,6 @@
 	<div class="snowman1_1"></div>
 		<div class="snowmaneye1"></div>
     <div class="snowmaneye2"></div>
+<div class="snowman2"></div>
+	<div class="snowman2_1"></div>
+		<div class="snowman2eye1"></div>
