--- a/index.html
+++ b/index.html
@@ -789,6 +789,16 @@
     background-color: black;
     border-radius: 100%;  
   }
+  .snowman2eye2{
+    width: 7px;
+    height: 7px;
+    margin: 56.1% auto;
+    position: absolute;
+    left: 173px;
+    z-index: 2;
+    background-color: black;
+    border-radius: 100%;  
+  }
   
 </style>
 <div class="shadowheart"></div>
@@ -804,3 +814,4 @@
 <div class="snowman2"></div>
 	<div class="snowman2_1"></div>
 		<div class="snowman2eye1"></div>
+		<div class="snowman2eye2"></div>
