--- a/index.html
+++ b/index.html
@@ -712,10 +712,11 @@
     animation-fill-mode: forwards;
   }
   .bottom {
-    width: 3000px;
+    width: 5000px;
     height: 100px;
+    position: absolute;
     margin: 60.5% auto;
-    left: 10%;
+    left: 0%;
     background: linear-gradient(0deg, rgb(21, 46, 118) 0%,
         rgb(162, 190, 229) 46%, rgb(249, 250, 238) 100%);    
   }
@@ -799,8 +800,18 @@
     background-color: black;
     border-radius: 100%;  
   }
-  
+  .christmastree {
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    margin: 950px auto;
+    left: 1500px;
+    background-color: green;
+    
+  }
 </style>
+
+
 <div class="shadowheart"></div>
 <div class="shadowheart flipped"></div>
 <div class="inside"></div>
@@ -815,3 +826,4 @@
 	<div class="snowman2_1"></div>
 		<div class="snowman2eye1"></div>
 		<div class="snowman2eye2"></div>
+<div class="christmastree"></div>
