--- a/index.html
+++ b/index.html
@@ -804,11 +804,21 @@
     width: 80px;
     height: 80px;
     position: absolute;
-    margin: 950px auto;
+    margin: 900px auto;
     left: 1500px;
     background-color: green;
-    
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
   }
+  .christmastree1 {
+    width: 90px;
+    height: 90px;
+    position: absolute;
+    margin: 950px auto;
+    left: 1495px;
+    background-color: green;
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
+  }
+  
 </style>
 
 
@@ -827,3 +837,4 @@
 		<div class="snowman2eye1"></div>
 		<div class="snowman2eye2"></div>
 <div class="christmastree"></div>
+	<div class="christmastree1"></div>
