--- a/index.html
+++ b/index.html
@@ -818,6 +818,24 @@
     background-color: green;
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
   }
+  .christmastree2 {
+    width: 90px;
+    height: 90px;
+    position: absolute;
+    margin: 1000px auto;
+    left: 1495px;
+    z-index: 1;
+    background-color: green;
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
+  }
+  .tree{
+    width: 30px;
+    height: 40px;
+    position: absolute;
+    margin: 1083px auto;
+    left: 1527px;
+    background-color: rgb(95, 43, 12);
+  }
   
 </style>
 
@@ -838,3 +856,5 @@
 		<div class="snowman2eye2"></div>
 <div class="christmastree"></div>
 	<div class="christmastree1"></div>
+	<div class="christmastree2"></div>
+	<div class="tree"></div>
