--- a/index.html
+++ b/index.html
@@ -804,7 +804,8 @@
     width: 80px;
     height: 80px;
     position: absolute;
-    margin: 900px auto;
+    top: 850px;
+    margin: 40px auto;
     left: 1500px;
     background-color: green;
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
@@ -813,7 +814,8 @@
     width: 90px;
     height: 90px;
     position: absolute;
-    margin: 950px auto;
+    top: 900px;
+    margin: 40px auto;
     left: 1495px;
     background-color: green;
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
@@ -822,7 +824,8 @@
     width: 90px;
     height: 90px;
     position: absolute;
-    margin: 1000px auto;
+    top: 960px;
+    margin: 40px auto;
     left: 1495px;
     z-index: 1;
     background-color: green;
@@ -832,7 +835,8 @@
     width: 30px;
     height: 40px;
     position: absolute;
-    margin: 1083px auto;
+    top: 1045px;
+    margin: 40px auto;
     left: 1527px;
     background-color: rgb(95, 43, 12);
   }
