--- a/index.html
+++ b/index.html
@@ -841,6 +841,17 @@
     background-color: rgb(95, 43, 12);
   }
   
+  .christmastreered{
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    top: 950px;
+    margin: 40px auto;
+    left: 1600px;
+    background-color: rgb(181, 0, 0);
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
+  }
+  
 </style>
 
 
@@ -862,3 +873,4 @@
 	<div class="christmastree1"></div>
 	<div class="christmastree2"></div>
 	<div class="tree"></div>
+<div class="christmastreered"></div>
