--- a/index.html
+++ b/index.html
@@ -851,7 +851,26 @@
     background-color: rgb(181, 0, 0);
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
   }
-  
+  .christmastreered1 {
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    top: 990px;
+    margin: 40px auto;
+    left: 1600px;
+    z-index: 1;
+    background-color: rgb(181, 0, 0);
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
+  }
+  .redtree {
+    width: 22px;
+    height: 35px;
+    position: absolute;
+    top: 1048px;
+    margin: 40px auto;
+    left: 1620px;
+    background-color: rgb(153, 132, 15);
+  }
 </style>
 
 
@@ -874,3 +893,5 @@
 	<div class="christmastree2"></div>
 	<div class="tree"></div>
 <div class="christmastreered"></div>
+	<div class="christmastreered1"></div>
+	<div class="redtree"></div>
