--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     justify-content: center;
     align-content: center;
     background-color: rgb(0, 0, 57);
-    
+   
   }
+  
   
   .shadowheart {
     width: 0;
@@ -871,6 +872,17 @@
     left: 1620px;
     background-color: rgb(186, 166, 15);
   }
+  div {
+    width: 500px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    margin: 1050px auto;
+    background-color: red;
+    font-size: 75;
+    
+  }
 </style>
 
 
@@ -895,3 +907,4 @@
 <div class="christmastreered"></div>
 	<div class="christmastreered1"></div>
 	<div class="redtree"></div>
+<div>Merry christmas</div>
