--- a/index.html
+++ b/index.html
@@ -879,9 +879,8 @@
     justify-content: center;
     align-content: center;
     margin: 1050px auto;
-    background-color: red;
+    background-color: pink;
     font-size: 75;
-    
   }
 </style>
 
