--- a/index.html
+++ b/index.html
@@ -717,6 +717,7 @@
     height: 100px;
     position: absolute;
     margin: 60.5% auto;
+    filter: blur(7px);
     left: 0%;
     background: linear-gradient(0deg, rgb(21, 46, 118) 0%,
         rgb(162, 190, 229) 46%, rgb(249, 250, 238) 100%);    
@@ -881,6 +882,7 @@
     margin: 1050px auto;
     background-color: pink;
     font-size: 75;
+ 
   }
 </style>
 
