--- a/index.html
+++ b/index.html
@@ -873,6 +873,29 @@
     left: 1620px;
     background-color: rgb(186, 166, 15);
   }
+  .christmastree3 {
+    width: 45px;
+    height: 45px;
+    position: absolute;
+    top: 1040px;
+    margin: 40px auto;
+    left: 1427px;
+    z-index: 1;
+    background-color: rgb(239, 222, 100);
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
+  }
+  .tree3 {
+    width: 45px;
+    height: 45px;
+    position: absolute;
+    top: 1060px;
+    margin: 40px auto;
+    left: 1427px;
+    z-index: 1;
+    background-color: rgb(239, 222, 100);
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
+    
+  }
   div {
     width: 500px;
     height: 100px;
@@ -908,4 +931,6 @@
 <div class="christmastreered"></div>
 	<div class="christmastreered1"></div>
 	<div class="redtree"></div>
+<div class="christmastree3"></div>
+	<div class="tree3"></div>
 <div>Merry christmas</div>
