--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
     width: 45px;
     height: 45px;
     position: absolute;
-    top: 1040px;
+    top: 1035px;
     margin: 40px auto;
     left: 1427px;
     z-index: 1;
@@ -888,12 +888,32 @@
     width: 45px;
     height: 45px;
     position: absolute;
-    top: 1060px;
+    top: 1050px;
     margin: 40px auto;
     left: 1427px;
     z-index: 1;
     background-color: rgb(239, 222, 100);
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
+  }
+  .tree3-1 {
+    width: 45px;
+    height: 45px;
+    position: absolute;
+    top: 1070px;
+    margin: 40px auto;
+    left: 1427px;
+    z-index: 1;
+    background-color: rgb(239, 222, 100);
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
+  }
+  .tree3-2{ 
+    width: 22px;
+    height: 35px;
+    position: absolute;
+    top: 1100px;
+    margin: 40px auto;
+    left: 1439px;
+    background-color: rgb(87, 50, 153);
     
   }
   div {
@@ -933,4 +953,6 @@
 	<div class="redtree"></div>
 <div class="christmastree3"></div>
 	<div class="tree3"></div>
+	<div class="tree3-1"></div>
+	<div class="tree3-2"></div>
 <div>Merry christmas</div>
