--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
     background-color: rgb(87, 50, 153);
     
   }
-  div {
+/*   div {
     width: 500px;
     height: 100px;
     display: flex;
@@ -926,7 +926,18 @@
     background-color: pink;
     font-size: 75;
  
+  } */
+  .snowmankid {
+    width: 35px;
+    height: 35px;
+    margin: 40px auto;
+    position: absolute;
+    top: 1050px;
+    left: 230px;
+    background-color: white;
+    border-radius: 100%;    
   }
+  
 </style>
 
 
@@ -955,4 +966,5 @@
 	<div class="tree3"></div>
 	<div class="tree3-1"></div>
 	<div class="tree3-2"></div>
+<div class="snowmankid"></div>
 <div>Merry christmas</div>
