--- a/index.html
+++ b/index.html
@@ -937,6 +937,16 @@
     background-color: white;
     border-radius: 100%;    
   }
+  .snowmankid1{
+    width: 35px;
+    height: 35px;
+    margin: 40px auto;
+    position: absolute;
+    top: 1100px;
+    left: 225px;
+    background-color: white;
+    border-radius: 100%;    
+  }
   
 </style>
 
@@ -967,4 +977,5 @@
 	<div class="tree3-1"></div>
 	<div class="tree3-2"></div>
 <div class="snowmankid"></div>
+	<div class="snowmankid1"></div>>
 <div>Merry christmas</div>
