--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@
     background-color: white;
     border-radius: 100%;    
   }
-  .snowmankid1{
+  .snowmankid1 {
     width: 35px;
     height: 35px;
     margin: 40px auto;
@@ -947,7 +947,16 @@
     background-color: white;
     border-radius: 100%;    
   }
-  
+  .snowmandkid2 {
+    width: 25px;
+    height: 25px;
+    margin: 40px auto;
+    position: absolute;
+    top: 1080px;
+    left: 280px;
+    background-color: white;
+    border-radius: 100%;  
+  }
 </style>
 
 
@@ -977,5 +986,6 @@
 	<div class="tree3-1"></div>
 	<div class="tree3-2"></div>
 <div class="snowmankid"></div>
-	<div class="snowmankid1"></div>>
+	<div class="snowmankid1"></div>
+<div class="snowmandkid2"></div>
 <div>Merry christmas</div>
