--- a/index.html
+++ b/index.html
@@ -953,9 +953,19 @@
     margin: 40px auto;
     position: absolute;
     top: 1080px;
-    left: 280px;
+    left: 260px;
     background-color: white;
     border-radius: 100%;  
+  }
+  .snowmankid3 {
+    width: 35px;
+    height: 35px;
+    margin: 40px auto;
+    position: absolute;
+    top: 1100px;
+    left: 265px;
+    background-color: white;
+    border-radius: 100%;    
   }
 </style>
 
@@ -988,4 +998,5 @@
 <div class="snowmankid"></div>
 	<div class="snowmankid1"></div>
 <div class="snowmandkid2"></div>
+	<div class="snowmankid3"></div>
 <div>Merry christmas</div>
