--- a/index.html
+++ b/index.html
@@ -947,6 +947,17 @@
     background-color: white;
     border-radius: 100%;    
   }
+  .kideye1 {
+    width: 4px;
+    height: 4px;
+    margin: 40px auto;
+    position: absolute;
+    left: 237px;
+    top: 1088px;
+    z-index: 2;
+    background-color: black;
+    border-radius: 100%;  
+  }
   .snowmandkid2 {
     width: 25px;
     height: 25px;
@@ -997,6 +1008,7 @@
 	<div class="tree3-2"></div>
 <div class="snowmankid"></div>
 	<div class="snowmankid1"></div>
+	<div class="kideye1"></div>
 <div class="snowmandkid2"></div>
 	<div class="snowmankid3"></div>
 <div>Merry christmas</div>
