--- a/index.html
+++ b/index.html
@@ -958,6 +958,17 @@
     background-color: black;
     border-radius: 100%;  
   }
+  .kideye2 {
+    width: 4px;
+    height: 4px;
+    margin: 40px auto;
+    position: absolute;
+    left: 245px;
+    top: 1088px;
+    z-index: 2;
+    background-color: black;
+    border-radius: 100%;  
+  }
   .snowmandkid2 {
     width: 25px;
     height: 25px;
@@ -1009,6 +1020,7 @@
 <div class="snowmankid"></div>
 	<div class="snowmankid1"></div>
 	<div class="kideye1"></div>
+	<div class="kideye2"></div>
 <div class="snowmandkid2"></div>
 	<div class="snowmankid3"></div>
 <div>Merry christmas</div>
