--- a/index.html
+++ b/index.html
@@ -989,6 +989,17 @@
     background-color: white;
     border-radius: 100%;    
   }
+  .kideye3 {
+    width: 4px;
+    height: 4px;
+    margin: 40px auto;
+    position: absolute;
+    left: 264px;
+    top: 1090px;
+    z-index: 2;
+    background-color: black;
+    border-radius: 100%; 
+  }
 </style>
 
 
@@ -1023,4 +1034,5 @@
 	<div class="kideye2"></div>
 <div class="snowmandkid2"></div>
 	<div class="snowmankid3"></div>
+	<div class="kideye3"></div>
 <div>Merry christmas</div>
