--- a/index.html
+++ b/index.html
@@ -614,8 +614,8 @@
       10px 220px 15px 15px lightpink;
    
     animation-name: appearing;
-    animation-duration: 7s;
-    animation-iteration-count: 1;
+    animation-duration: 15s;
+    animation-iteration-count: infinite;
     animation-fill-mode: forwards;
     
 }
@@ -708,8 +708,8 @@
       20px 210px 10px 10px lightpink;
   
     animation-name: appearing2;
-    animation-duration: 7s;
-    animation-iteration-count: 1;
+    animation-duration: 15s;
+    animation-iteration-count: infinite;
     animation-fill-mode: forwards;
   }
   .bottom {
