--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
     background-color: rgb(87, 50, 153);
     
   }
-/*   div {
+  div {
     width: 500px;
     height: 100px;
     display: flex;
@@ -925,8 +925,9 @@
     margin: 1050px auto;
     background-color: pink;
     font-size: 75;
- 
-  } */
+    font-style: italic;
+ 		
+  }
   .snowmankid {
     width: 25px;
     height: 25px;
