--- a/index.html
+++ b/index.html
@@ -1001,7 +1001,28 @@
     background-color: black;
     border-radius: 100%; 
   }
+
 </style>
+
+<!DOCTYPE html>
+<html>
+<style>
+img {
+  border: 0px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 300px;
+  height: 300px;
+  position: center;
+  margin: 45% auto;
+  display: block;  
+}
+</style>
+<body>
+
+<img src="santaclause.gif" alt="santa">
+</body>
+</html>
 
 
 <div class="shadowheart"></div>
@@ -1036,4 +1057,4 @@
 <div class="snowmandkid2"></div>
 	<div class="snowmankid3"></div>
 	<div class="kideye3"></div>
-<div>Merry christmas</div>
+<!-- <div>Merry christmas</div> -->
