--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
-<style>
-
+<!DOCTYPE html>
+<html>
+  <head>
+   <style>
+img {
+  border: 0px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 300px;
+  height: 300px;
+  position: center;
+  margin: 45% auto;
+  display: block;  
+  opacity: 0.85;
+}
+     
   body {
     margin: 0;  
     height: 100vh;
@@ -1002,23 +1016,8 @@
     border-radius: 100%; 
   }
 
-</style>
-
-<!DOCTYPE html>
-<html>
-<style>
-img {
-  border: 0px solid #ddd;
-  border-radius: 4px;
-  padding: 5px;
-  width: 300px;
-  height: 300px;
-  position: center;
-  margin: 45% auto;
-  display: block;  
-  opacity: 0.85;
-}
-</style>
+		</style> 
+  </head>
 <body>
 
 <img src="santaclause.gif" alt="santa">
