--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Xmas Card</title>
+    
    <style>
 img {
   border: 0px solid #ddd;
@@ -14,7 +16,7 @@ img {
   opacity: 0.85;
 }
      
-  body {
+body {
     margin: 0;  
     height: 100vh;
     display: flex;
@@ -1019,42 +1021,46 @@ img {
 		</style> 
   </head>
 <body>
+	<div class="shadowheart"></div>
+	<div class="shadowheart flipped"></div>
+	<div class="inside"></div>
+	<div class="inside2"></div>
+  
+  <div class="scene">
+    <img src="santaclause.gif" alt="santa">
+  	<div class="snow"></div>
+		<div class="bottom"></div>
+		<div class="snowman1"></div>
+		<div class="snowman1_1"></div>
+		<div class="snowmaneye1"></div>
+    <div class="snowmaneye2"></div>
+		<div class="snowman2"></div>
+		<div class="snowman2_1"></div>
+		<div class="snowman2eye1"></div>
+		<div class="snowman2eye2"></div>
+		<div class="christmastree"></div>
+		<div class="christmastree1"></div>
+		<div class="christmastree2"></div>
+		<div class="tree"></div>
+		<div class="christmastreered"></div>
+		<div class="christmastreered1"></div>
+		<div class="redtree"></div>
+		<div class="christmastree3"></div>
+		<div class="tree3"></div>
+		<div class="tree3-1"></div>
+		<div class="tree3-2"></div>
+		<div class="snowmankid"></div>
+		<div class="snowmankid1"></div>
+		<div class="kideye1"></div>
+		<div class="kideye2"></div>
+		<div class="snowmandkid2"></div>
+		<div class="snowmankid3"></div>
+		<div class="kideye3"></div>
+<!-- <div>Merry christmas</div> -->
+  </div>
+	
 
-<img src="santaclause.gif" alt="santa">
 </body>
 </html>
 
 
-<div class="shadowheart"></div>
-<div class="shadowheart flipped"></div>
-<div class="inside"></div>
-<div class="inside2"></div>
-<div class="snow"></div>
-<div class="bottom"></div>
-<div class="snowman1"></div>
-	<div class="snowman1_1"></div>
-		<div class="snowmaneye1"></div>
-    <div class="snowmaneye2"></div>
-<div class="snowman2"></div>
-	<div class="snowman2_1"></div>
-		<div class="snowman2eye1"></div>
-		<div class="snowman2eye2"></div>
-<div class="christmastree"></div>
-	<div class="christmastree1"></div>
-	<div class="christmastree2"></div>
-	<div class="tree"></div>
-<div class="christmastreered"></div>
-	<div class="christmastreered1"></div>
-	<div class="redtree"></div>
-<div class="christmastree3"></div>
-	<div class="tree3"></div>
-	<div class="tree3-1"></div>
-	<div class="tree3-2"></div>
-<div class="snowmankid"></div>
-	<div class="snowmankid1"></div>
-	<div class="kideye1"></div>
-	<div class="kideye2"></div>
-<div class="snowmandkid2"></div>
-	<div class="snowmankid3"></div>
-	<div class="kideye3"></div>
-<!-- <div>Merry christmas</div> -->
