--- a/index.html
+++ b/index.html
@@ -728,6 +728,15 @@ body {
     animation-iteration-count: infinite;
     animation-fill-mode: forwards;
   }
+     
+     .scene {
+       background-color: rgba(255,0,0,0.5);
+       width: 100vw;
+       height: 33vh;
+       position: fixed;
+       bottom: 0px;
+       left: 0px;
+     }
   .bottom {
     width: 1900px;
     height: 100px;
@@ -932,18 +941,7 @@ body {
     background-color: rgb(87, 50, 153);
     
   }
-  div {
-    width: 500px;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    margin: 1050px auto;
-    background-color: pink;
-    font-size: 75;
-    font-style: italic;
- 		
-  }
+
   .snowmankid {
     width: 25px;
     height: 25px;
@@ -1056,7 +1054,7 @@ body {
 		<div class="snowmandkid2"></div>
 		<div class="snowmankid3"></div>
 		<div class="kideye3"></div>
-<!-- <div>Merry christmas</div> -->
+
   </div>
 	
 
