--- a/index.html
+++ b/index.html
@@ -738,12 +738,13 @@ body {
        left: 0px;
      }
   .bottom {
-    width: 1900px;
+    width: 100%;
     height: 100px;
     position: absolute;
-    margin: 60.5% auto;
+/*     margin: 60.5% auto; */
     filter: blur(9px);
     left: 0%;
+    bottom: 0;
     background: linear-gradient(0deg, rgb(21, 46, 118) 0%,
         rgb(162, 190, 229) 46%, rgb(249, 250, 238) 100%);    
   }
