--- a/index.html
+++ b/index.html
@@ -754,11 +754,12 @@ body {
   }
   
   .snowman1 {
-    width: 60px;
-    height: 60px;
-    margin: 53% auto;
+    width: 50px;
+    height: 50px;
+    bottom: 33%;
+/*     margin: 53% auto; */
     position: absolute;
-    left: 50px;
+    left: 11%;
     background-color: white;
     border-radius: 100%; 
   }
@@ -766,9 +767,10 @@ body {
   .snowman1_1 {
     width: 80px;
     height: 80px;
-    margin: 56% auto;
+/*     margin: 56% auto; */
+    bottom: 15%;
     position: absolute;
-    left: 40.5px;
+    left: 10%;
     background-color: white;
     border-radius: 100%; 
   }
@@ -776,9 +778,10 @@ body {
   .snowmaneye1 {
     width: 10px;
     height: 10px;
-    margin: 54% auto;
+/*     margin: 54% auto; */
     position: absolute;
-    left: 64px;
+    bottom: 40%;
+    left: 11.7%;
     z-index: 2;
     background-color: black;
     border-radius: 100%;    
@@ -786,9 +789,10 @@ body {
   .snowmaneye2 {
     width: 10px;
     height: 10px;
-    margin: 54% auto;
+/*     margin: 54% auto; */
     position: absolute;
-    left: 85px;
+    bottom: 40%;
+    left: 13%;
     z-index: 2;
     background-color: black;
     border-radius: 100%;    
