--- a/index.html
+++ b/index.html
@@ -801,18 +801,20 @@ body {
   .snowman2 {
     width: 40px;
     height: 40px;
-    margin: 55.5% auto;
+/*     margin: 55.5% auto; */
     position: absolute;
-    left: 150px;
+    bottom: 25%;
+    left: 18%;
     background-color: white;
     border-radius: 100%; 
   }
   .snowman2_1 {
     width: 60px;
     height: 60px;
-    margin: 57.3% auto;
+/*     margin: 57.3% auto; */
     position: absolute;
-    left: 140px;
+    bottom: 12%;
+    left: 17.5%;
     background-color: white;
     border-radius: 100%; 
   }
