--- a/index.html
+++ b/index.html
@@ -842,9 +842,8 @@ body {
     width: 80px;
     height: 80px;
     position: absolute;
-    top: 950px;
-    margin: 40px auto;
-    left: 1500px;
+    bottom: 50%;
+    left: 70%;
     background-color: green;
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
   }
@@ -852,19 +851,17 @@ body {
     width: 90px;
     height: 90px;
     position: absolute;
-    top: 980px;
-    margin: 40px auto;
-    left: 1495px;
+    bottom: 35%;
+    left: 69.7%;
     background-color: green;
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
   }
   .christmastree2 {
-    width: 90px;
-    height: 90px;
+    width: 100px;
+    height: 100px;
     position: absolute;
-    top: 1020px;
-    margin: 40px auto;
-    left: 1495px;
+    bottom: 21%;
+    left: 69.5%;
     z-index: 1;
     background-color: green;
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
@@ -873,9 +870,8 @@ body {
     width: 30px;
     height: 40px;
     position: absolute;
-    top: 1095px;
-    margin: 40px auto;
-    left: 1527px;
+    bottom: 15%;
+    left: 71.7%;
     background-color: rgb(95, 43, 12);
   }
   
