--- a/index.html
+++ b/index.html
@@ -672,7 +672,6 @@ body {
       1200px 500px 10px 6px white,
       350px 700px 10px 6px white,
       -80px 650px 10px 6px white;    
-
   }
   
   .inside2{
@@ -723,8 +722,8 @@ body {
        width: 100vw;
        height: 33vh;
        position: fixed;
-       bottom: 0px;
-       left: 0px;
+       top: 65%;
+       left: 0%;
      }
      
   img {
@@ -734,68 +733,62 @@ body {
   width: 300px;
   height: 300px;
   position: absolute;
-  bottom: 0%;
+  top: 12%;
 	left: calc(50% - 150px);
-/*   margin: 45% auto; */
   display: block;  
   opacity: 0.85;
 }
    
   .bottom {
     width: 100%;
-    height: 100px;
+    height: 30%;
     position: absolute;
-/*     margin: 60.5% auto; */
     filter: blur(9px);
     left: 0%;
-    bottom: 0;
+    top: 73%;
     background: linear-gradient(0deg, rgb(21, 46, 118) 0%,
         rgb(162, 190, 229) 46%, rgb(249, 250, 238) 100%);    
   }
   
   .snowman1 {
-    width: 50px;
-    height: 50px;
-    bottom: 33%;
-/*     margin: 53% auto; */
+    width: 5%;
+    height: 13%;
     position: absolute;
+    top: 53%;
     left: 11%;
     background-color: white;
-    border-radius: 100%; 
+    border-radius: 50%; 
   }
   
   .snowman1_1 {
-    width: 80px;
-    height: 80px;
-/*     margin: 56% auto; */
-    bottom: 15%;
+    width: 7.5%;
+    height: 20%;
     position: absolute;
-    left: 10%;
+    top: 65%;
+    left: 9.8%;
     background-color: white;
-    border-radius: 100%; 
+    border-radius: 50%; 
   }
   
   .snowmaneye1 {
-    width: 10px;
-    height: 10px;
-/*     margin: 54% auto; */
-    position: absolute;
-    bottom: 40%;
-    left: 11.7%;
-    z-index: 2;
     background-color: black;
-    border-radius: 100%;    
+    border-radius: 50%;
+    width: 0.8%;
+    height: 3%;
+    position: absolute;
+    top: 57%;
+    left: 12%;
+    z-index: 2; 
   }
   .snowmaneye2 {
-    width: 10px;
-    height: 10px;
-/*     margin: 54% auto; */
+    width: 0.8%;
+    height: 3%;
     position: absolute;
     bottom: 40%;
-    left: 13%;
+    left: 14%;
     z-index: 2;
     background-color: black;
-    border-radius: 100%;    
+    border-radius: 50%;    
   }
   
   .snowman2 {
@@ -1030,10 +1023,10 @@ body {
 	<div class="shadowheart flipped"></div>
 	<div class="inside"></div>
 	<div class="inside2"></div>
+  <div class="snow"></div>
   
   <div class="scene">
     <img src="santaclause.gif" alt="santa">
-  	<div class="snow"></div>
 		<div class="bottom"></div>
 		<div class="snowman1"></div>
 		<div class="snowman1_1"></div>
