--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@ body {
      
      .scene {
        background-color: rgba(255,0,0,0.5);
-       width: 100vw;
+       width: 1500px;
        height: 33vh;
        position: fixed;
        top: 65%;
