--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@ body {
     width: 0.8%;
     height: 3%;
     position: absolute;
-    bottom: 40%;
+    top: 57%;
     left: 14%;
     z-index: 2;
     background-color: black;
@@ -792,44 +792,42 @@ body {
   }
   
   .snowman2 {
-    width: 40px;
-    height: 40px;
-/*     margin: 55.5% auto; */
+    width: 3%;
+    height: 13%;
     position: absolute;
-    bottom: 25%;
+    top: 57%;
     left: 18%;
     background-color: white;
-    border-radius: 100%; 
+    border-radius: 50%; 
   }
   .snowman2_1 {
-    width: 60px;
-    height: 60px;
-/*     margin: 57.3% auto; */
+    width: 4%;
+    height: 16%;
     position: absolute;
-    bottom: 12%;
+    top: 68%;
     left: 17.5%;
     background-color: white;
-    border-radius: 100%; 
+    border-radius: 50%; 
   }
   .snowman2eye1 {
-    width: 7px;
-    height: 7px;
-    margin: 56.1% auto;
+    width: 0.6%;
+    height: 2.5%;
     position: absolute;
-    left: 160px;
+    top: 60%;
+    left: 18.5%;
     z-index: 2;
     background-color: black;
-    border-radius: 100%;  
+    border-radius: 50%;    
   }
   .snowman2eye2{
-    width: 7px;
-    height: 7px;
-    margin: 56.1% auto;
+    width: 0.6%;
+    height: 2.5%;
     position: absolute;
-    left: 173px;
+    top: 60%;
+    left: 19.8%;
     z-index: 2;
     background-color: black;
-    border-radius: 100%;  
+    border-radius: 50%;    
   }
   .christmastree {
     width: 80px;
