--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@ body {
   }
   
   .snowman1 {
-    width: 5%;
+    width: 4%;
     height: 13%;
     position: absolute;
     top: 53%;
@@ -830,30 +830,29 @@ body {
     border-radius: 50%;    
   }
   .christmastree {
-    width: 80px;
-    height: 80px;
+    width: 6%;
+    height: 18%;
     position: absolute;
-    bottom: 50%;
+    top: 35%;
     left: 70%;
     background-color: green;
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
   }
   .christmastree1 {
-    width: 90px;
-    height: 90px;
+    width: 6%;
+    height: 18%;
     position: absolute;
-    bottom: 35%;
-    left: 69.7%;
+    top: 45%;
+    left: 70%;
     background-color: green;
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
   }
   .christmastree2 {
-    width: 100px;
-    height: 100px;
+    width: 6%;
+    height: 18%;
     position: absolute;
-    bottom: 21%;
-    left: 69.5%;
-    z-index: 1;
+    top: 55%;
+    left: 70%;
     background-color: green;
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
   }
