--- a/index.html
+++ b/index.html
@@ -853,15 +853,16 @@ body {
     position: absolute;
     top: 55%;
     left: 70%;
+    z-index: 1;
     background-color: green;
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
   }
   .tree{
-    width: 30px;
-    height: 40px;
+    width: 2.5%;
+    height: 11%;
     position: absolute;
-    bottom: 15%;
-    left: 71.7%;
+    top: 70%;
+    left: 71.9%;
     background-color: rgb(95, 43, 12);
   }
   
