--- a/index.html
+++ b/index.html
@@ -867,33 +867,29 @@ body {
   }
   
   .christmastreered{
-    width: 60px;
-    height: 60px;
+    width: 6%;
+    height: 18%;
     position: absolute;
-    top: 1010px;
-    margin: 40px auto;
-    left: 1600px;
+    top: 45%;
+    left: 80%;
     background-color: rgb(181, 0, 0);
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
   }
   .christmastreered1 {
-    width: 60px;
-    height: 60px;
+    width: 6%;
+    height: 18%;
     position: absolute;
-    top: 1050px;
-    margin: 40px auto;
-    left: 1600px;
-    z-index: 1;
+    top: 55%;
+    left: 80%;
     background-color: rgb(181, 0, 0);
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
   }
   .redtree {
-    width: 22px;
-    height: 35px;
+    width: 2.5%;
+    height: 10%;
     position: absolute;
-    top: 1100px;
-    margin: 40px auto;
-    left: 1620px;
+    top: 73%;
+    left: 81.9%;
     background-color: rgb(186, 166, 15);
   }
   .christmastree3 {
