--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@ body {
   }
      
      .scene {
-       background-color: rgba(255,0,0,0.5);
+/*        background-color: rgba(255,0,0,0.5); */
        width: 100vw;
        height: 33vh;
        position: fixed;
@@ -892,123 +892,7 @@ body {
     left: 81.9%;
     background-color: rgb(186, 166, 15);
   }
-  .christmastree3 {
-    width: 45px;
-    height: 45px;
-    position: absolute;
-    top: 1035px;
-    margin: 40px auto;
-    left: 1427px;
-    z-index: 1;
-    background-color: rgb(239, 222, 100);
-    clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
-  }
-  .tree3 {
-    width: 45px;
-    height: 45px;
-    position: absolute;
-    top: 1050px;
-    margin: 40px auto;
-    left: 1427px;
-    z-index: 1;
-    background-color: rgb(239, 222, 100);
-    clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
-  }
-  .tree3-1 {
-    width: 45px;
-    height: 45px;
-    position: absolute;
-    top: 1070px;
-    margin: 40px auto;
-    left: 1427px;
-    z-index: 1;
-    background-color: rgb(239, 222, 100);
-    clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
-  }
-  .tree3-2{ 
-    width: 22px;
-    height: 35px;
-    position: absolute;
-    top: 1100px;
-    margin: 40px auto;
-    left: 1439px;
-    background-color: rgb(87, 50, 153);
-    
-  }
-
-  .snowmankid {
-    width: 25px;
-    height: 25px;
-    margin: 40px auto;
-    position: absolute;
-    top: 1080px;
-    left: 230px;
-    background-color: white;
-    border-radius: 100%;    
-  }
-  .snowmankid1 {
-    width: 35px;
-    height: 35px;
-    margin: 40px auto;
-    position: absolute;
-    top: 1100px;
-    left: 225px;
-    background-color: white;
-    border-radius: 100%;    
-  }
-  .kideye1 {
-    width: 4px;
-    height: 4px;
-    margin: 40px auto;
-    position: absolute;
-    left: 237px;
-    top: 1088px;
-    z-index: 2;
-    background-color: black;
-    border-radius: 100%;  
-  }
-  .kideye2 {
-    width: 4px;
-    height: 4px;
-    margin: 40px auto;
-    position: absolute;
-    left: 245px;
-    top: 1088px;
-    z-index: 2;
-    background-color: black;
-    border-radius: 100%;  
-  }
-  .snowmandkid2 {
-    width: 25px;
-    height: 25px;
-    margin: 40px auto;
-    position: absolute;
-    top: 1080px;
-    left: 260px;
-    background-color: white;
-    border-radius: 100%;  
-  }
-  .snowmankid3 {
-    width: 35px;
-    height: 35px;
-    margin: 40px auto;
-    position: absolute;
-    top: 1100px;
-    left: 265px;
-    background-color: white;
-    border-radius: 100%;    
-  }
-  .kideye3 {
-    width: 4px;
-    height: 4px;
-    margin: 40px auto;
-    position: absolute;
-    left: 264px;
-    top: 1090px;
-    z-index: 2;
-    background-color: black;
-    border-radius: 100%; 
-  }
+ 
 
 		</style> 
   </head>
@@ -1037,17 +921,6 @@ body {
 		<div class="christmastreered"></div>
 		<div class="christmastreered1"></div>
 		<div class="redtree"></div>
-		<div class="christmastree3"></div>
-		<div class="tree3"></div>
-		<div class="tree3-1"></div>
-		<div class="tree3-2"></div>
-		<div class="snowmankid"></div>
-		<div class="snowmankid1"></div>
-		<div class="kideye1"></div>
-		<div class="kideye2"></div>
-		<div class="snowmandkid2"></div>
-		<div class="snowmankid3"></div>
-		<div class="kideye3"></div>
 
   </div>
 	
