--- a/index.html
+++ b/index.html
@@ -751,15 +751,15 @@ body {
   }
   
   .snowman1 {
-    width: 4%;
-    height: 13%;
-    position: absolute;
-    top: 53%;
-    left: 11%;
+    width: 5%;
+    height: 10%;
     background-color: white;
-    border-radius: 50%; 
-  }
-  
+    position: absolute;
+    top: 55%;
+    left: 11%;
+    border-radius: 50%;
+     }
+    
   .snowman1_1 {
     width: 7.5%;
     height: 20%;
@@ -921,7 +921,7 @@ body {
 		<div class="christmastreered"></div>
 		<div class="christmastreered1"></div>
 		<div class="redtree"></div>
-
+		<audio src="Merry Christmas.mp3" controls="loop"></audio>
   </div>
 	
 
