--- a/index.html
+++ b/index.html
@@ -893,6 +893,18 @@ body {
     background-color: rgb(186, 166, 15);
   }
  
+     audio {
+    border: 0px solid #ddd;
+  	border-radius: 4px;
+  	padding: 5px;
+  	width: 300px;
+  	height: 300px;
+  	position: absolute;
+  	top: 17%;
+		left: calc(50% - 150px);
+  	display: block;  
+  	opacity: 0.5;
+     }
 
 		</style> 
   </head>
