--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@ body {
 		<div class="christmastreered"></div>
 		<div class="christmastreered1"></div>
 		<div class="redtree"></div>
-		<audio src="Merry Christmas.mp3" controls="loop"></audio>
+		<audio src="Merry Christmas.mp3" autoplay="loop"></audio>
   </div>
 	
 
