--- a/index.html
+++ b/index.html
@@ -923,6 +923,15 @@ body {
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
      } 
      
+     .bluetree {
+    	width: 3%;
+      height: 11%;
+      position: absolute;
+      top: 70.9%;
+      left: 91.6%;
+      background-color: rgb(83, 208, 170);
+      
+     }
      audio {
     border: 0px solid #ddd;
   	border-radius: 4px;
@@ -966,6 +975,7 @@ body {
     <div class="purpletree"></div>
     <div class="purpletree1"></div>
     <div class="purpletree2"></div>
+    <div class="bluetree"></div>
 		<audio controls loop>
       <source src="Merry Christmas.mp3"></audio>
   </div>
