--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@ body {
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
      } 
      
-     .bluetree {
+     .greentree {
     	width: 3%;
       height: 11%;
       position: absolute;
@@ -975,7 +975,7 @@ body {
     <div class="purpletree"></div>
     <div class="purpletree1"></div>
     <div class="purpletree2"></div>
-    <div class="bluetree"></div>
+    <div class="greentree"></div>
 		<audio controls loop>
       <source src="Merry Christmas.mp3"></audio>
   </div>
