--- a/index.html
+++ b/index.html
@@ -937,12 +937,21 @@ body {
     width: 3%;
     height: 10%;
     position: absolute;
-    top: 67%;
+    top: 65%;
     left: 23%;
     background-color: white;
     border-radius: 50%; 
      }
   
+     .snowmanbaby1 {
+    width: 4.1%;
+    height: 11.5%;
+    position: absolute;
+    top: 73%;
+    left: 22.5%;
+    background-color: white;
+    border-radius: 50%; 
+     }
       
      audio {
     border: 0px solid #ddd;
@@ -989,6 +998,8 @@ body {
     <div class="purpletree2"></div>
     <div class="greentree"></div>
     <div class="snowmanbaby"></div>
+    <div class="snowmanbaby1"></div>
+
 
 		<audio controls loop>
       <source src="Merry Christmas.mp3"></audio>
