--- a/index.html
+++ b/index.html
@@ -934,6 +934,7 @@ body {
     animation-duration: 12s;
     animation-direction: alternate, normal, reverse;
     animation-iteration-count: infinite;
+    animation-timing-function: 5s;
     animation-fill-mode: forwards;
      }
   
